--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
 }
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
@@ -36,4 +37,15 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Firebase BoM
+    //implementation platform('com.google.firebase:firebase-bom:28.2.1')
+
+    //Firebase SDK for Google Analytics
+    //implementation 'com.google.firebase:firebase-analytics'
+
+    //Firebase Auth
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+
+
 }
