change map service provider from google to mapbox, consume the route optimization api

--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,30 @@ buildscript {
 
 allprojects {
     repositories {
+
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+        jcenter()
+        // Warning: this repository is going to shut down soon
+     //   maven { url 'https://mapbox.bintray.com/mapbox' }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+    /*   maven{
+            url 'https://api.mapbox.com/downloads/v2/releases/maven'
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                // Do not change the username below.
+                // This should always be `mapbox` (not your username).
+                username = 'mapbox'
+                // Use the secret token you stored in gradle.properties as the password
+                password = project.properties['MAPBOX_DOWNLOADS_TOKEN'] ?: ""
+            }
+        }
+
+     */
+
+
     }
 }
 
