--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dropex">
+    package="com.example.dropex"
+    android:theme="@style/Theme.MyApp">
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -15,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApp">
-        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".ui.profile.ProfileActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -24,9 +25,10 @@
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
+        <!--
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" /> <!-- <activity -->
+            android:value="@string/google_maps_key" /> <activity -->
         <!-- android:name=".VerifyOTPActivity" -->
         <!-- android:screenOrientation="portrait" -->
         <!-- android:windowSoftInputMode="adjustResize" /> -->
@@ -39,20 +41,25 @@
         <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
         <!-- </intent-filter> -->
         <!-- </activity> -->
-
         <activity
-            android:name=".SplashScreenActivity"
+            android:name=".ui.main.SplashScreenActivity"
             android:theme="@style/Theme.MyApp.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
-            android:name=".OnboardingActivity"
+            android:name=".ui.main.OnboardingActivity"
             android:theme="@style/Theme.MyApp.NoActionBar" />
-        <activity android:name=".HomeActivity" />
+        <activity android:name=".ui.home.HomeActivity" >
+
+        </activity>
+        <activity
+            android:name=".NavigationLauncherActivity">
+        </activity>
+
     </application>
 
 </manifest>
