Firebase auth on login complete

--- a/driverapplication/src/main/AndroidManifest.xml
+++ b/driverapplication/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         <activity android:name=".ForgotPasswordActivity"></activity>
         <activity android:name=".WelcomeActivity" />
         <activity android:name=".RegisterActivity" />
+        <activity android:name=".MainActivity" />
+
         <activity
             android:name=".LoginActivity"
             android:theme="@style/Theme.DropEx">
