--- a/driverapplication/src/main/AndroidManifest.xml
+++ b/driverapplication/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DropEx">
         <activity android:name=".ui.profile.Login.ForgotPasswordActivity" />
-        <activity android:name=".ui.profile.Register.RegisterActivity" />
+        <activity android:name=".ui.profile.Register.RegisterActivity"
+            android:parentActivityName=".ui.profile.Login.LoginActivity"/>
         <activity android:name=".MainActivity" />
         <activity android:name=".NavigationLauncherActivity" />
         <activity android:name=".ui.profile.ProfileActivity" />
@@ -27,6 +28,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".Service.TrackingService"/>
+        <service
+            android:name=".Service.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
     </application>
 
