--- a/driverapplication/build.gradle
+++ b/driverapplication/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.firebase:geofire-java:3.0.0'
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
