--- a/driverapplication/src/main/AndroidManifest.xml
+++ b/driverapplication/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.driverapplication"
-    android:theme="@style/Theme.DropEx">
+    android:theme="@style/Theme.MyApp">
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:name=".DriverClient"
@@ -10,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DropEx">
+        android:theme="@style/Theme.MyApp">
         <activity android:name=".ui.profile.Login.ForgotPasswordActivity" />
         <activity android:name=".ui.profile.Register.RegisterActivity"
             android:parentActivityName=".ui.profile.Login.LoginActivity"/>
@@ -20,7 +21,7 @@
 
         <activity
             android:name=".ui.profile.Login.LoginActivity"
-            android:theme="@style/Theme.DropEx"/>
+            android:theme="@style/Theme.MyApp"/>
         <activity android:name=".ui.profile.main.WelcomeActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,6 +37,7 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+        <service android:name=".Service.LocationUpdateService"/>
 
     </application>
 
