--- a/driverapplication/build.gradle
+++ b/driverapplication/build.gradle
@@ -63,4 +63,5 @@ dependencies {
     //graphhopper
     implementation 'com.graphhopper:graphhopper-navigation-android-ui:0.1.0-SNAPSHOT'
     implementation 'com.graphhopper:directions-api-client:0.10.1-4'
+    implementation 'com.androidstudy:daraja:1.0.2'
 }
